# tomorrows-news

./: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  dockerfile  notes.md  pyproject.toml  pyrightconfig.json  requirements.txt  startup.sh  test.md
.cursor/rules/: act-as-a-tutor.mdc
.github/workflows/: main_tomorrows-news-app.yml
.serena/: project.yml
alembic/: 2025_08_01_1318-4e65468e6aad_add_fastapi_users_support_with_uuid_.py  env.py
alembic/versions/: 2025_07_14_2133-e0b7ea5eef61_initial_revision.py  2025_07_14_2156-26902928785f_create_tables_for_users_topics_events_.py  2025_07_15_0911-e2c63680af1f_add_country_column_to_topic_model.py  2025_07_15_1131-618ee661f747_separate_scraping_sources_from_event_.py  2025_07_15_1157-56bdb2256424_reverse_event_source_relationship_one_.py  2025_07_15_1944-fe4f0caa5c1c_add_scraping_frequency_field_to_.py  2025_07_15_1952-fcde91f8f8e3_change_scraping_sources_to_belong_to_.py  2025_07_16_1330-d61d3290004d_make_scrapingsource_source_type_an_enum.py  2025_07_25_0906-d0bcf69bb139_modify_event_table_rename_and_modify_.py  2025_07_25_1247-f3a1d693bcb2_modify_embeddings_column_type.py  2025_07_27_1402-13030b5007e2_make_event_id_in_extractedevent_.py  2025_07_28_1308-d8e08bba9fc7_some_modifications_to_event_and_.py  2025_07_28_1402-0da354497286_remove_location_vector_from_event_and_.py  2025_07_28_1711-1a6cbfffe549_add_degrees_of_separation_to_.py  2025_07_29_1813-3cbb1ae975ab_add_event_comparisons_table_for_analysis.py  2025_07_30_0913-53ce4f38dde2_change_duration_on_event_extractedevent_.py  2025_08_01_1439-521bb88ec1cb_add_fastapi_users_with_uuid.py  2025_08_19_0834-f2e7b08ee48b_change_username_to_email_in_users_table.py  2025_08_19_0857-648319643a05_extend_email_max_length.py  2025_08_19_0912-039cce7e2545_change_full_name_to_first_last_name_in_.py  2025_08_20_1459-9c12b903a18e_add_country_code_language_code_to_.py  2025_08_22_1333-3c844a9f3938_add_cascade_to_extracted_events_event_.py  2025_08_22_1439-def7b4b8f666_add_snippet_column_to_extractedeventdb.py  2025_09_03_2319-1c6092c793ef_add_sources_table.py  2025_09_04_1003-a8475cf0f6f7_add_cascade_delete_to_event_comparisons_.py  2025_09_04_1234-79fda5ffeaa7_add_ondelete_set_null_to_event_.py  2025_09_04_1435-af21f44b12b4_add_currently_scraping_to_.py  2025_09_11_0920-ae4d8dd62f53_link_websourcedb_to_scrapingsourcedb_to_.py  2025_12_12_1455-2a40a9e28266_add_last_error_to_scrapingsourcedb.py  2025_12_17_2232-0dbdb441d5b7_add_is_demo_user_to_userdb.py  2025_12_23_1524-4bb1a9b15354_add_cascading_delete_behaviour_to_db_.py
app/: database.py  main.py
app/core/: auth.py  config.py  custom_logging.py  debug.py  email.py  enums.py
app/debugging/: debug_async_vscode_terminal.py  debug_ipython.py  debug_runner.py  debug_sync.py
app/discarded/: list_jobs.py  (+5 more)
frontend/: dashboard.html  feed-edit.html  feed-new.html  index.html  login.html  register.html  request-reset.html  request-verify.html  reset-password.html  source-edit.html  source-new.html  topic-edit.html  topic-new.html  verify.html
frontend-react/: .env.example  index.html  package-lock.json  package.json  vite.config.js
(+100 files in other folders)
